fixed logo size on mobile

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -285,7 +285,7 @@
 
 @media (max-width: 768px) {
   .logoContainer {
-    height: 120px; /* Adjust height as necessary */
+    height: 160px; /* Adjust height as necessary */
   }
 
   .logoContainer img {
